--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
