--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "axios": "^0.19.2",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-select": "^3.1.0"
   },
   "scripts": {
