--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "nodemon index.js",
     "start:test": "cross-env NODE_ENV=test node index.js",
-    "build:ui": "rm -rf build && cd ../frontend && npm run build --prod && cp -r build ../backend"
+    "build:ui": "rm -rf build && cd ../frontend && npm run build --prod && cp -r build ../backend",
+    "build:start": "rm -rf build && cd ../frontend && npm run build --prod && cp -r build ../backend && cd ../backend && nodemon index.js"
   },
   "author": "Hamza Khan",
   "license": "ISC",
