--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,14 @@
     "axios": "^0.21.1",
     "d3": "^5.16.0",
     "d3-array": "^2.4.0",
-    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-number-format": "^4.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "sass": "^1.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
